--- a/istio-destinationrule.yaml
+++ b/istio-destinationrule.yaml
@@ -1,9 +1,9 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: helloworld
+  name: myweb 
 spec:
-  host: helloworld
+  host: myweb 
   subsets:
   - name: v1
     labels:
